Fix checks label alignment

--- a/hmwk2/happy.css
+++ b/hmwk2/happy.css
@@ -257,7 +257,7 @@ fieldset.checks textarea {
 }
 
 fieldset.checks label {
-   margin-left: 25px;
+   margin-left: 21px;
 }
 
 fieldset.text label {
